// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Satellite component renders correctly with alternate props 1`] = `
<div
  className="satellite satellite-1-3"
/>
`;

exports[`Satellite component renders correctly with default props 1`] = `
<div
  className="satellite satellite-1-2"
/>
`;
